# srv

./: .env.sh  .envrc  .gitignore  .ignore  .mise.sh  .mise.toml  .rustcV  README.md  dev.sh  dist.sh  env.sh  hostlog.sql  init.sh  mod.nt  mod.sh  package.json  pnpm-lock.yaml  todo.md  upgrade.package.json.coffee
.github/workflows/: api.yml  build.yml
db/: init.sql
db/function/: hostId.sql
db/procedure/: cronLi.sql  splitMail.sql
db/table/: cron.sql  cronErr.sql  do.sql  host.sql  log.sql  uidHost.sql
dev/: .gitignore  README.md  conf.coffee  destory.sh  down.sh  env.sh  gen.coffee  kvrocks.yml  log.sh  mariadb.coffee  mariadb.yml  nginx.yml  oceanbase.coffee  oceanbase.yml  percona.coffee  percona.yml  phpmyadmin.coffee  phpmyadmin.yml  redis.yml  restart.sh  stop.sh  up.sh  use.nt
dev/conf/: redis.conf
dev/conf/init/percona/: init.sql
dev/conf/mariadb/: Dockerfile  init.cnf
dev/conf/mariadb/conf/: mariadb.cnf  rocksdb.cnf
dev/conf/mariadb/init/: init.sh  init.sql
dev/conf/nginx/bak/conf/: 3ti.site.conf  xxai.art.conf
dev/conf/nginx/bak/site/: 3ti.site.conf  md.xxai.art.conf  xxai.art.conf
dev/conf/nginx/conf/: dev.conf  i18n.dev.conf
dev/conf/nginx/header/: proxy.conf
dev/conf/nginx/upstream/: i18n.conf
dev/conf/percona/: init.sh  rocksdb.cnf  site.cnf
ops/: env.sh  ssl.sh
ops/backup/: .gitignore
ops/backup/db/: README.md  dump.coffee  dump.sh  load.coffee  scp.sh
ops/backup/pg/: .env.sh  .gitignore  _load.sh  backup.sh  crontab.backup.table.sh  exe.sh  extension.sql  load.sh  package.json  readme.md  run.sh  setup.sh
ops/backup/pg/src/: data.coffee  dir.coffee  load.coffee  main.coffee  table.coffee
ops/smtp/: README.md  init.sh  package.json  pnpm-lock.yaml  sendmail.coffee
ops/smtp/conf/: chasquid.conf
ops/smtp/domains/: users
rust/: .envrc  .gitignore  Cargo.toml  README.md  build.sh  dev.sh  dist.sh  env.sh  init.sh  log.sh  package.json  pnpm-lock.yaml  redis.lua  run.sh  service.sh
rust/api/: Cargo.toml
rust/api/src/: main.rs
rust/lib/arg/: Cargo.toml
rust/lib/arg/src/: lib.rs
rust/lib/client/: Cargo.toml
rust/lib/client/src/: lib.rs  token.rs  uid.rs
rust/lib/exepid/: Cargo.toml
rust/lib/exepid/src/: lib.rs
rust/lib/g/: Cargo.toml
rust/lib/g/src/: lib.rs
rust/lib/gid/: Cargo.toml
rust/lib/gid/src/: lib.rs
rust/lib/gid/tests/: main.rs
rust/lib/i18n/: Cargo.toml  test.sh
rust/lib/i18n/src/: code_id.rs  lib.rs
rust/lib/i18n/tests/: main.rs
rust/lib/ip/: Cargo.toml
rust/lib/ip/src/: lib.rs
rust/lib/kfn/: Cargo.toml  README.md
rust/lib/kfn/src/: lib.rs
rust/lib/lang/: Cargo.toml
rust/lib/lang/src/: lib.rs
rust/lib/m/: Cargo.toml
rust/lib/m/src/: lib.rs
rust/lib/mark/: Cargo.toml
rust/lib/mark/src/: lib.rs
rust/lib/passwd/: Cargo.toml
rust/lib/passwd/src/: lib.rs
rust/lib/r/: Cargo.toml
rust/lib/sk/: Cargo.toml
rust/lib/sk/src/: lib.rs
rust/lib/tp/: Cargo.toml  README.md
rust/lib/tp/src/: lib.rs
rust/lib/ua/: Cargo.toml
rust/lib/ua/src/: lib.rs
rust/lib/uid_by_token/: Cargo.toml
rust/lib/uid_by_token/src/: lib.rs
rust/lib/uid_by_token/tests/: main.rs
rust/lib/user/: Cargo.toml
rust/lib/user/src/: K.rs  by_id.rs  cookie_set.rs  lang.rs  lib.rs  pipeline.rs  user.rs
rust/lib/util/: Cargo.toml
rust/lib/util/src/: hash.rs  lib.rs  mail.rs
rust/lib/xerr/: Cargo.toml
rust/lib/xkv/: .envrc  Cargo.toml  dev.sh  dist.sh
rust/lib/xkv/src/: lib.rs
rust/lib/xkv/tests/: main.rs
rust/mycron/: Cargo.toml  build.sh  install.service.sh  log.sh  mycron.service  mycron.sh  run.sh  service  service.sh
rust/mycron/src/: main.rs
rust/sh/: .env.tmp  .gitignore  api.coffee  build.sh  clippy.sh  conf.coffee  cron.coffee  deploy.sh  encrypt.sh  flag.sh  gen.coffee  github.release.sh  i18n.coffee  lua.coffee  rm_target_if_rustc_ver_change.coffee  rmdbg.sh  service  service.log.sh  service.sh  test.i18n.coffee  udeps.sh  upgrade.sh
rust/sh/os/etc/systemd/system/: api.service  srv.service
rust/srv/: Cargo.toml
rust/srv/.url/: Cargo.toml
rust/srv/.url/src/: lib.rs
rust/srv/src/: .gitignore  main.rs
sh/: git.pull.sh  vapid.coffee
tmp/: env
