[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.5"
user = { path = "../user" }
tracing = "0.1.40"
xtld = "0.1.1"
intbin = "0.1.2"
set_header = "0.1.8"
apart = "0.1.8"
re = "0.1.5"
t3 = "0.1.16"
aok = "0.1.11"
uid_by_token = { version = "0.1.0", path = "../uid_by_token" }
