[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.7"
user = { path = "../user" }
xtld = "0.1.3"
set_header = "0.1.10"
apart = "0.1.11"
re = "0.1.9"
t3 = "0.1.20"
aok = "0.1.15"
uid_by_token = { version = "0.1.0", path = "../uid_by_token" }
