[package]
name = "gid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
r = { path = "../../lib/r" }
vb = "0.1.1"
paste = "1.0.14"
anyhow = "1.0.79"
trt = "0.1.27"
tokio = { version = "1.35.1", features = ["parking_lot"] }
sts = "0.1.19"
static_init = "1.0.3"

[dev-dependencies]
tokio-test = "0.4.3"
