[package]
name = "gid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
r = { path = "../../lib/r" }
paste = "1.0.15"
anyhow = "1.0.86"
trt = "0.1.29"
tokio = { version = "1.39.2", features = ["parking_lot"] }
sts = "0.1.23"
static_init = "1.0.3"

[dev-dependencies]
tokio-test = "0.4.4"
