[package]
name = "uid_by_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aok = "0.1.12"
base64 = "0.22.1"
intbin = "0.1.2"
r = { version = "0.1.0", path = "../r" }
sha2 = "0.10.8"
static_init = "1.0.3"
ub64 = { version = "0.0.10" }
vb = "0.1.3"

[dev-dependencies]
tokio = { version = "1.39.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "fs",
  "io-util",
] }
