[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cookie = "0.18.1"
ub64 = { version = "0.0.10", features = ["u64", "u64li"] }
r = { path = "../r" }
gid = { path = "../gid" }
m = { path = "../m" }
sk = { path = "../sk" }
anyhow = "1.0.86"
vb = "0.1.3"
tracing = "0.1.40"
intbin = "0.1.2"
cookiestr = "0.1.1"
kfn = { version = "0.1.0", path = "../kfn" }
const-str = "0.5.7"
ip = { path = "../ip", features = ["http"] }
ua = { path = "../ua" }
sonic-rs = "0.3.5"
sts = "0.1.21"
static_init = { version = "1.0.3", features = [
  "lock_statistics",
  "parking_lot",
  "parking_lot_core"
] }
trt = "0.1.28"
xhash = "0.1.21"
chrono = "0.4.38"
