[package]
name = "xkv"
version = "0.1.20"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/3TiSite/srv/tree/main/rust/lib/xkv"
repository = "https://github.com/3TiSite/srv.git"
description = "use fred connection redis via env"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.81"
aok = "0.1.3"
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
fred = { version = "8.0.5", features = [
  "replicas",
  "rustls",
  "sha-1",
  "unix-sockets",
] }
paste = "1.0.14"
trt = "0.1.28"

[dev-dependencies]
tokio = { version = "1.36.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
