[package]
name = "url"
version = "0.1.0"
edition = "2021"

[dependencies]
private_tran={path="../../../mod/private/tran",package="tran"}
pub_ws={path="../../../mod/pub/ws",package="ws"}
pub_captcha={path="../../../mod/pub/captcha",package="captcha"}
pub_auth={path="../../../mod/pub/auth",package="auth"}
pub_mailsub={path="../../../mod/pub/mailsub",package="mailsub"}
pub_webpush={path="../../../mod/pub/webpush",package="webpush"}
pub_pay={path="../../../mod/pub/pay",package="pay"}
pub_token={path="../../../mod/pub/token",package="token"}
pub_ping={path="../../../mod/pub/ping",package="ping"}
pub_github={path="../../../mod/pub/github",package="github"}
